Add GraalVM for JDK 21 support. (#1236)
* Add GraalVM for JDK 21 support.
- no longer register HomeFinderFeature post JDK 21
- no longer link against fdlibm on Windows post JDK 21
- link against extnet and mswsock on Windows post JDK 21

* Add GraalVM for JDK 21 support.
- no longer link against fdlibm on Linux post JDK 21
- add required --add-exports for GluonFeature

* - add java and graalvm version fields in InternalProjectConfiguration
- only add '--add-exports' argument when needed

* - revert unnecessary changes

* - update javadoc
- update toString to include new fields

* - clean up handling of version specific static java libraries

* - use version-aware static library lists

* - improve readability and semantics

* - remove duplicate 'java -version' execution